--- a/podcasts.yml
+++ b/podcasts.yml
@@ -64,4 +64,23 @@ podcasts:
       - name: Emmanuel Bernard
       - name: Guillaume Laforge
       - name: Katia Aresti
-
+  - title: Java Pub House
+    url: https://www.javapubhouse.com
+    logo: wp-content/uploads/2018/11/shield.png
+    language: EN
+    social:
+      twitter: https://x.com/javapubhouse
+    hosts:
+      - name: Freddy Guime
+      - name: Bob Paulin
+  - title: OffHeap
+    url: https://www.javaoffheap.com
+    logo: wp-content/uploads/2020/11/OffHeapLogoBig-inverted-1.png
+    language: EN
+    social:
+      twitter: https://x.com/offheap
+    hosts:
+      - name: Freddy Guime
+      - name: Bob Paulin
+      - name: Michael Minella
+      - name: Josh Juneau
